EDT progress and Inst availability
